[project]
name = "existential-llm"
version = "0.1.0"
description = ""
authors = [{ name = "bastianibanez", email = "bastian.miba@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["langgraph (>=0.4.7,<0.5.0)", "langchain (>=0.3.25,<0.4.0)", "langchain-ollama (>=0.3.3,<0.4.0)", "ollama (>=0.5.1,<0.6.0)", "pydantic (>=2.11.5,<3.0.0)", "langchain-deepseek (>=0.1.3,<0.2.0)", "python-dotenv (>=1.1.0,<2.0.0)", "langsmith (>=0.3.43,<0.4.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
